﻿**************************************************************************
02/12/2021 FBSF version 0.2
Recompilation imperative des projets
**************************************************************************
Correctifs perfmeter :

	La publication comme exporteur de module du CpuStepTime ne fonctionne pas en mode sous-iteration
	La variable est exportée independemment de l'execution du pot-traitement du module.
	Suppression des mesures de pre et post traitement.
	Mise a jour de la documentation
	Cas du step by step : le mode step by step n'appelait pas le dump du perfmeter. 
	
Correctifs mode batch :
 
	Renommage de l'option -batch en -no-gui  et mise a jour de la documentation
	Mode full batch et -no-gui avec execution en mode au plus vite et lancement directe de la simulation
	
Correctifs Configurateur

	1	Correctif concernant les scrolls bar et le zoom
	2	Différenciation graphique du « main feeder » global
	3	Impossible de supprimer le groupe principal
	4 	Impossible de coller un plugin vers une sequence
	5	Possible de copier/coller d'une PluginList entre configurations
	
Correctifs Data Flow Graph 
	Mise a jour de la documentation
	ajout de guillemets dans le fichier produit pour les noms des variables de la ZE

	
Build de la version	
	Build.bat permet avec l'option "all" de compiler Fbsf sur les 3 targetts , release, debug et batch
		Les bianiares de chaque target sont séparés dans 3 sous dossier du répertoire lib
		Chaque sous répertoire contient FbsfUtilities et fbsfplugins compilés avec l'option de la target
	FbsfEnv.bat et FbsfEnv.sh sont mis à jour suite au déplacement de la libraire dynamqiue FbsfPublicData dans lib/"target"/fbsfplugins/	
		
Dossier Tests
	Renomage de la démo MEZT en testMini
	Ajout du projet TEST-FBSF 	